Fix CSS bug (div was forcing a line wrap)

--- a/frontend/public/javascripts/datasetManagementUI/styles/ShowOutputSchema.scss
+++ b/frontend/public/javascripts/datasetManagementUI/styles/ShowOutputSchema.scss
@@ -94,15 +94,12 @@ li.active {
   display: block;
 
   .titleWrapper {
-    float: left;
-
-    h3 {
+    h2 {
       margin-right: 0.3em;
       float: left;
     }
 
     span {
-      display: block;
       margin-top: 8px;
       float: left;
     }
